--- a/src/StormBasket/index.html
+++ b/src/StormBasket/index.html
@@ -2,22 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Hello</title>
-    <style>
-        body {
-            background: #FFFFFF;
-        }
-    </style>
+    <title>Storm Basketball</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/external/phaser.min.js"></script>
-    <script src="js/external/require.js"></script>
 </head>
 <body>
-    <div id="area"></div>
+    <div id="gameArea"></div>
     <!--<script src="js/start.js"></script>-->
     <script src="js/boot.js"></script>
     <script src="js/preload.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/gameOver.js"></script>
     <script src="js/index.js"></script>
     
 </body>
